objects/Shift_Contract__c.object
<CustomObject>
    <description>Represents a specific version of a contract, related to some contract execution.</description>
    <fields>
        <fullName>Canceled_At__c</fullName>
        <label>Canceled At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expires_On__c</fullName>
        <label>Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HS_Signature_Request_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>HelloSign Signature Request ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HS_Template_ID__c</fullName>
        <label>HelloSign Template ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Template_Values_Map__c</fullName>
        <label>HelloSign Template Values Map</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Viewed_At__c</fullName>
        <label>Last Viewed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migrated_At__c</fullName>
        <description>Time at which this object was migrated</description>
        <label>Migrated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Source_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Base object from which this object was migrated.</description>
        <label>Migration Source ID</label>
        <referenceTo>Migration_Source__c</referenceTo>
        <relationshipName>Contract_Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Shift Contracts</relationshipLabel>
        <relationshipName>Shift_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDF_URL__c</fullName>
        <label>PDF URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sent_On__c</fullName>
        <label>Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_On__c</fullName>
        <label>Signed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signer_Email__c</fullName>
        <label>Signer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Signer_Name__c</fullName>
        <label>Signer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Shift Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Shift Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shift Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>